> Added Images to the portfolio.html gallery with over text > Corrected responsive sizing issues in the nav branch > Added formatting to the portfolio page that aligns the images correctly > Updated the distance between the nav bar to be consistent across all pages > Updated code on contact.html to make form boxes fill the section box > Corrected syntax error in Nav Links section (m --> md)

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,12 @@
     body {
         background-image: url('assets/background.jpg');
     }
+
+/*About Page Image Formatting*/
+    .picture img {
+        background: #fff;
+        border: 1px #ddd solid;
+        padding: 1px;
+        float: left;
+        margin: 1rem;
+}
